// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating domain item is missing metaEdId should have validation failures 1`] = `"Domain Item DomainItemName is missing a MetaEdId value."`;

exports[`when validating domain item is missing metaEdId should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "DomainItemName",
}
`;

exports[`when validating subdomain item is missing metaEdId for entity should have validation failures 1`] = `"Domain Item DomainEntityElementName is missing a MetaEdId value."`;

exports[`when validating subdomain item is missing metaEdId for entity should have validation failures 2`] = `
Object {
  "column": 18,
  "line": 5,
  "tokenText": "DomainEntityElementName",
}
`;
